# dddmr_local_planner

./: README.md
base_trajectory/: CMakeLists.txt  package.xml
base_trajectory/include/base_trajectory/: trajectory.h  trajectory_sample_generator.h
base_trajectory/src/: trajectory.cpp
local_planner/: CMakeLists.txt  package.xml
local_planner/config/: local_planner_play_ground.yaml
local_planner/include/local_planner/: local_planner.h
local_planner/launch/: local_planner_play_ground.launch
local_planner/rviz/: local_planner_play_ground.rviz
local_planner/src/: local_planner.cpp  local_planner_node.cpp  local_planner_play_ground_node.cpp
mpc_critics/: CMakeLists.txt  mpc_critics.xml  package.xml
mpc_critics/config/: mpc_critics.yaml
mpc_critics/include/mpc_critics/: collision_min_max_model.h  collision_model.h  model_shared_data.h  mpc_critics_ros.h  pure_pursuit_model.h  scoring_model.h  shortest_angle_model.h  stacked_scoring_model.h  stick_path_model.h  toward_global_plan_model.h
mpc_critics/launch/: mpc_critics.launch
mpc_critics/models/: collision_min_max_model.cpp  collision_model.cpp  pure_pursuit_model.cpp  shortest_angle_model.cpp  stick_path_model.cpp  toward_global_plan_model.cpp
mpc_critics/src/: mpc_critics_node.cpp  mpc_critics_ros.cpp  scoring_model.cpp  stacked_scoring_model.cpp
recovery_behaviors/: CMakeLists.txt  package.xml  recovery_behaviors.xml
recovery_behaviors/behaviors/: rotate_inplace_behavior.cpp
recovery_behaviors/config/: recovery_behaviors.yaml
recovery_behaviors/include/recovery_behaviors/: recovery_behaviors_ros.h  recovery_behaviors_shared_data.h  robot_behavior.h  rotate_inplace_behavior.h  stacked_robot_behavior.h
recovery_behaviors/launch/: recovery_behaviors.launch
recovery_behaviors/script/: example_client.py
recovery_behaviors/src/: recovery_behaviors_node.cpp  recovery_behaviors_ros.cpp  robot_behavior.cpp  stacked_robot_behavior.cpp
trajectory_generators/: CMakeLists.txt  package.xml  trajectory_generators.xml
trajectory_generators/config/: trajectory_generators.yaml
trajectory_generators/include/trajectory_generators/: dd_rotate_inplace_theory.h  dd_simple_trajectory_generator_limits.h  dd_simple_trajectory_generator_params.h  dd_simple_trajectory_generator_theory.h  stacked_generator.h  trajectory_generator_theory.h  trajectory_generators_ros.h  trajectory_shared_data.h  velocity_iterator.h
trajectory_generators/launch/: trajectory_generators.launch
trajectory_generators/src/: stacked_generator.cpp  trajectory_generator_theory.cpp  trajectory_generators_node.cpp  trajectory_generators_ros.cpp
trajectory_generators/theories/: dd_rotate_inplace_theory.cpp  dd_simple_trajectory_generator_theory.cpp
