<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>local_planner</name>
  <version>0.0.0</version>

  <description>
    The local_planner package
  </description>

  <author>Apola</author>
  <maintainer email="yan_1whun1@hotmail.com">Apola</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>libpcl-all</depend>
  <depend>pcl_conversions</depend>
  <depend>angles</depend>
  <depend>base_trajectory</depend>
  <depend>perception_3d</depend>
  <depend>mpc_critics</depend>
  <depend>trajectory_generators</depend>
  <depend>dddmr_sys_core</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
